----------
v6.1.0-git
----------

[mms] Re-add alerts log to dynamic mailbox view.
[mms] Rewritten/improved linked attachment code.
[mms] Add discard draft option to compose page allowing the user to cancel
      composition and permanently delete the original draft (Request #12017).
[mms] Minimal view menu entries are now accessible via numbered accesskeys
      (Request #5847).
[mms] Add image upload feature to the HTML editor image plugin.
[mms] Allow drag & drop/pasting of images into the HTML editor.
[mms] All basic view pages are now routed through the basic.php endpoint.
[mms] Save AJAX showMessage call when reloading the dynamic mailbox page with a
      message preview active.
[mms] Dynamically display MIME type icon for attachments uploaded on the
      dynamic compose page.
[mms] Remove 'compose_cc' and 'compose_bcc' preferences.
[mms] Support attaching vCard in dynamic compose.
[mms] Support attaching PGP public keys in dynamic compose.
[mms] Smartmobile view now uses additive loading instead of pagination on the
      mailbox page.
[mms] Converted 'link_all_attachments' configuration option to the
      'link_attach' preference.
[mms] Support link attachment feature in dynamic view.
[mms] Display Virtual Folders in smartmobile view.
[mms] Abstract all UIDs used for mailbox/message navigation on the browser to
      BUIDs (browser UIDs) (Bug #10719).
[mms] Use more efficient murmurhash3 to determine changes in compose message
      that will trigger auto saved drafts.
[mms] Initialize viewport and mailbox list in single AJAX call when initially
      loading the dynamic mailbox view.
[mms] Add message thread view to dynamic mailbox preview.
[mms] Better UI for changing quicksearch criteria in dynamic mailbox screen.
[mms] Collapse multiple mailbox export options in dynamic mailbox view to
      single action.
[mms] Importing a PGP personal key now only requires the private key.


------
v6.0.4
------
