@@ -1,10 +1,0 @@
-<div id="confirm" data-role="dialog" data-theme="e">
- <div data-role="header">
-  <h1><?php echo _("Confirmation")?></h1>
- </div>
- <div data-role="content" class="ui-body">
-  <div id="imp-confirm-text"></div>
-   <a href="#" id="imp-confirm-action" data-role="button" data-theme="a"></a>
-   <a href="#" data-role="button" data-rel="back"><?php echo _("Cancel") ?></a>
- </div>
-</div>
